fix:fix overscoll behaviour on mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
-  background-color: red;
+  background-color: rgba(0, 0, 0, 0.957);
   background-image: url('./images/texture2.png');
-  background-position: center top;
+  
  overflow: hidden;
   overscroll-behavior-y:none;
  
